--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -51,6 +51,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:importantForAccessibility="no"
         app:elevation="0dp"
         app:srcCompat="@drawable/ic_favorite" />
 </FrameLayout>
