--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,6 +8,7 @@
     android:importantForAccessibility="no"
     android:orientation="vertical"
     android:clickable="true"
+    android:padding="20dp"
     android:focusable="true">
 
     <LinearLayout
@@ -17,10 +18,11 @@
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="199dp"
+            android:layout_width="326dp"
             android:layout_height="160dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/dice_1" />
+            app:srcCompat="@drawable/dice_1"
+            android:layout_marginEnd="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +33,10 @@
             <TextView
                 android:id="@+id/item_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="59dp"
+                android:gravity="center_vertical"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 tools:text="@string/coffee1" />
 
             <TextView
@@ -40,7 +45,7 @@
                 android:layout_height="wrap_content"
                 tools:text="@string/coffee_desc1" />
 
-<!--            <Button-->
+            <!--            <Button-->
 <!--                android:id="@+id/button_to_detail"-->
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"-->
