--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,7 +21,7 @@
             android:layout_width="326dp"
             android:layout_height="160dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/dice_1"
+            app:srcCompat="@drawable/coffee_1"
             android:layout_marginEnd="10dp" />
 
         <LinearLayout
@@ -45,12 +45,6 @@
                 android:layout_height="wrap_content"
                 tools:text="@string/coffee_desc1" />
 
-            <!--            <Button-->
-<!--                android:id="@+id/button_to_detail"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Go"-->
-<!--                />-->
         </LinearLayout>
 
     </LinearLayout>
